--- a/style.css
+++ b/style.css
@@ -27,3 +27,28 @@ padding: 3rem;
     padding: 5px;
     
     }
+    div > p {
+        background-color: yellow;
+      }
+div + p {
+        background-color: burlywood;
+      }
+div ~ p {
+        background-color: palevioletred;
+      }
+#menu{
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    background:violet;
+    transition: width 3s, height 5s, transform 4s;
+      }
+#menu:hover{
+        opacity: 0.8;
+        transform:rotate(360deg);
+        
+    }
+    h2 {
+        font-family: "Times New Roman", Georgia, Serif;
+    }
+    
